tests/integration/error/enum_unknown_variant.alo
// expect-error: Unknown enum variant 'Color::Blue'

enum Color {
  Red,
  Green
}

fun main() -> void {
  imut c: Color = Color::Blue;
}
